# miso-start-template

./: .gitignore  README.md  default.nix  miso-app.cabal
web/: Main.hs
